# fx-iq

./: .gitignore  Makefile  README.md
backend/: .env.example  .gitignore  PAPER_TRIAL_STATUS.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/data/: eur_usd_daily.csv  eur_usd_sample.csv
backend/docs/: external-fx-platform-benchmark.md  prospective-paper-operator-runbook.md
backend/research_protocols/: prospective_paper_policy_fingerprint.json  prospective_paper_trading_protocol.json  untouched_cross_market_validation_protocol.json  untouched_market_data_manifest.json
backend/research_results/: untouched_cross_market_validation_outcome.json  untouched_cross_market_validation_results.json
backend/scripts/: adaptive_regime_policy_walk_forward.py  analyse_atr_breakout_quality.py  analyse_regime_direction_robustness.py  analyse_regime_filter_decisions.py  analyse_trade_regime_expectancy.py  audit_nested_close_location_rejections.py  audit_nested_risk_policy_overlap.py  check_oanda_practice_account.py  check_prospective_paper_health.py  check_source_privacy.py  compare_atr_regime_walk_forward.py  compare_selective_regime_risk.py  current_ai_readiness.py  demonstrate_portfolio_regime_risk.py  demonstrate_regime_risk.py  enrich_passive_observation_outcomes.py  external_market_development_validation.py  fetch_oanda_history.py  generate_eur_usd_history.py  guarded_adaptive_policy_walk_forward.py  nested_atr_quality_filter_walk_forward.py  nested_close_location_risk_walk_forward.py  nested_conjunction_risk_walk_forward.py  open_external_market_holdout.py  (+23 more)
(+229 files in other folders)
