[project]
name = "fx-iq-backend"
version = "0.1.0"
description = "FX IQ backend API for trading research and automation"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
